[GTK][WPE][Coordinated Graphics] ASSERTION FAILURE: (!reasons.contains(CompositionReason::RenderingUpdate) || !m_sceneState->pendingTiles()) https://bugs.webkit.org/show_bug.cgi?id=307414

Reviewed by Nikolas Zimmermann.

ThreadedCompositor::flushCompositingState() had an assertion:

> ASSERT(!reasons.contains(CompositionReason::RenderingUpdate) || !m_sceneState->pendingTiles());

This assertion ensured that no pending tiles for
CompositionReason::RenderingUpdate. However, in layout tests,
internals.layerTreeAsText() triggers flushing pending layers. It increases
pending tiles while the compositor thread is rendering layers.

Use m_state.isWaitingForTiles instead of m_sceneState->pendingTiles() for the
assertion.

Co-authored-by: Carlos Garcia Campos <cgarcia@igalia.com>

* Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/ThreadedCompositor.cpp:
(WebKit::ThreadedCompositor::flushCompositingState):

Canonical link: https://commits.webkit.org/307753@main